# PASTEQUE

./: .gh_pr_comments.txt  .gitignore  .start.out  AGENTS.md  Makefile  README.md  gh_pr.json  start.sh
backend/: .env.example  README.md  dev.db  pyproject.toml
backend/scripts/: compute_embeddings.py
backend/src/insight_backend/: __init__.py  main.py
backend/src/insight_backend/core/: agent_limits.py  config.py  database.py  logging.py  security.py
backend/src/insight_backend/engines/: openai_engine.py
backend/src/insight_backend/integrations/: mcp_manager.py  mcp_stdout_filter.py  mindsdb_client.py  neo4j_client.py  openai_client.py
backend/src/insight_backend/models/: __init__.py  chart.py  conversation.py  data_source_preference.py  explorer_column.py  feedback.py  loop.py  (+3 more)
backend/tests/core/: test_database_admin_enforcement.py  test_security_user_is_admin.py
backend/tests/repositories/: test_conversation_repository.py  test_data_repository.py  test_dictionary_repository.py  test_feedback_repository.py  test_user_repository.py  test_user_repository_usage_stats.py  test_user_table_permission_repository.py
backend/tests/services/: test_admin_reset_password.py  test_auth_service.py  test_chart_service.py  test_chat_evidence.py  test_chat_rag.py  test_data_service_overview.py  test_mcp_chart_service.py  test_mcp_chart_service_validations.py  test_mcp_stdio_filter.py  test_mindsdb_sync.py  test_neo4j_graph_service.py  test_neo4j_ingest.py  test_nl2sql_service.py  test_rag_service.py  test_retrieval_service.py  test_router_service.py  test_user_deletion.py
(+148 files in other folders)
