[project]
name = "insight-backend"
version = "0.1.0"
description = "Backend API for 20_insightv2 (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.2.0",
  "pydantic-ai-slim[openai,mcp]>=1.2.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  # Optional: YAML for MCP config files
  "pyyaml>=6.0.0",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "passlib[bcrypt]>=1.7",
  "python-jose[cryptography]>=3.3",
  "argon2-cffi>=23.1",
  "sqlglot>=25.0.0",
  "sentence-transformers>=5.1.2",
  "tqdm>=4.67.1",
  "pgvector>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
dev-dependencies = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/insight_backend"]

[tool.hatch.build.targets.sdist]
include = ["src/insight_backend"]
